--- a/style.css
+++ b/style.css
@@ -2,27 +2,25 @@
     display:flex;
     justify-content: center;
 }
-
-,container {
+.container {
     display: flex;
     flex-wrap: wrap;
-    width: 250px;
-    height: 250px;
-   border: 0px black solid;
-   margin: 0px black;
+    width: 500px;
+    height: 500px;
+    justify-content: center;
+   border:1px black solid;
+   margin: auto;
+
 }
 
 .divsq {
     display:flex;
-    flex-direction: row;
-    min-height: 125px;
-    max-height: 164px;
-    min-width: 125px;
-    max-width: 164px;
-    border: 0px black solid;
-
+    border: 1px solid black ;
+    padding: 1px;
+    min-width: 150px;
+    min-height; 150px;
 }
 
 .reset {
-    margin-top: 32px;
+    margin-bottom: 32px;
 }
